updated image paths

--- a/etf_analyzer.ipynb
+++ b/etf_analyzer.ipynb
@@ -248,7 +248,7 @@
     "    xlabel='Days',\n",
     "    title = 'PYPL Daily Returns'\n",
     ")\n",
-    "hvplot.save(pyplot_daily_returns_plot, '../images/pyplot_daily_returns.png')"
+    "# hvplot.save(pyplot_daily_returns_plot, 'images/pyplot_daily_returns.png')"
    ]
   },
   {
@@ -270,7 +270,7 @@
     "    ylabel='Cumulative Returns (%)',\n",
     "    xlabel='Number of Days',\n",
     "    title='PYPL Cumulative Returns')\n",
-    "hvplot.save(pypl_cumulative_returns_plot, '../images/pypl_cumulative_returns_plot.png')"
+    "# hvplot.save(pypl_cumulative_returns_plot, 'images/pypl_cumulative_returns_plot.png')"
    ]
   },
   {
@@ -1223,7 +1223,7 @@
     "    xlabel='Days',\n",
     "    title='ETF Portfolio Cumulative Returns December 2016 - December 2020'\n",
     ")\n",
-    "hvplot.save(etf_cumulative_returns_plot,'../images/etf_cumulative_returns_plot.png') \n",
+    "# hvplot.save(etf_cumulative_returns_plot,'images/etf_cumulative_returns_plot.png') \n",
     "etf_cumulative_returns_plot"
    ]
   },
